[package]
name = "react-native-directory-cli"
version = "0.1.0"
edition = "2024"
description = "React Native Directory CLI — query 2400+ RN packages from the terminal"
license = "MIT"
repository = "https://github.com/Quegenx/react-native-directory-cli"
homepage = "https://github.com/Quegenx/react-native-directory-cli"
readme = "README.md"
keywords = ["react-native", "expo", "cli", "directory", "packages"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rnd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
owo-colors = { version = "4", features = ["supports-colors"] }
directories = "5"
anyhow = "1"
humantime = "2"
regex = "1"
walkdir = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
